--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <a href="/about" class="text-gray-600 transition duration-300 ease-in-out hover:text-gray-900 hover:text-lg">About</a>
         <a href="/contact" class="text-gray-600 transition duration-300 ease-in-out hover:text-gray-900 hover:text-lg">Contact</a>
         <a href="/feedback" class="text-gray-600 transition duration-300 ease-in-out hover:text-gray-900 hover:text-lg">Feedback</a>
-        {% if session['username'] == 'Sidd-2000' %}
+        {% if session['username'] == 'Sidd-2000' and session['password'] %}
         <form action="/getusers" method = 'post'>
           <button class="text-black" type="submit">Users</button>
         </form>
